--- a/environments.html
+++ b/environments.html
@@ -59,7 +59,7 @@ Source URL: https://canvas.oregonstate.edu/courses/1946034/pages/exploration-web
 
         <nav class="navbar">
             <ul>
-                <li><a href="dragons.html">Dragons</a></li>
+                <li><a href="dragons">Dragons</a></li>
                 <li><a href="types.html">Types</a></li>
                 <li><a href="abilities.html">Abilities</a></li>
                 <li><a href="environments.html">Environments</a></li>
