Added home index, fixed Dragons page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Dragons Database</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="/css/style.css" rel="stylesheet" type="text/css">
     <style>
         html,
         body {
@@ -24,6 +24,7 @@
 
     <nav class="navbar">
         <ul>
+            <li><a href="index.html">Home</a></li>
             <li><a href="dragons">Dragons</a></li>
             <li><a href="types.html">Types</a></li>
             <li><a href="abilities.html">Abilities</a></li>
@@ -32,7 +33,7 @@
     </nav>
 
     <div class="img-container">
-        <img src="images/dragon.jpg" alt="dragon" aria-hidden="true" decoding="async">
+        <img src="/img/dragon.jpg" alt="dragon" aria-hidden="true" decoding="async">
     </div>
     <p class="img-credit">Photo by Nur Andi Ravsanjani Gusma:
         https://www.pexels.com/photo/gold-dragon-statue-near-gray-concrete-building-5926488/</p>
