--- a/abilities.html
+++ b/abilities.html
@@ -6,7 +6,7 @@ Adapted from people.html starter code:
 Source URL: https://canvas.oregonstate.edu/courses/1946034/pages/exploration-web-application-technology?module_item_id=23809327 -->
     <head>
         <title>Dragon Abilities</title>
-        <link href="style.css" rel="stylesheet" type="text/css">
+        <link href="/css/style.css" rel="stylesheet" type="text/css">
         <script language="JavaScript">
         function showform(dowhat) {
             /*
@@ -59,6 +59,7 @@ Source URL: https://canvas.oregonstate.edu/courses/1946034/pages/exploration-web
 
         <nav class="navbar">
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="dragons">Dragons</a></li>
                 <li><a href="types.html">Types</a></li>
                 <li><a href="abilities.html">Abilities</a></li>
