--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="dragons">Dragons</a></li>
-            <li><a href="types.html">Types</a></li>
+            <li><a href="types">Types</a></li>
             <li><a href="abilities.html">Abilities</a></li>
             <li><a href="environments.html">Environments</a></li>
         </ul>
